# trojan-rust

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
auth-worker/: Cargo.toml  LICENSE  schema.sql  wrangler.example.toml
auth-worker/src/: handler.rs  lib.rs  types.rs  util.rs
auth-worker/src/handler/: admin_migrate.rs  admin_nodes.rs  admin_templates.rs  admin_traffic.rs  admin_users.rs  me.rs  mod.rs  node_api.rs  sub.rs
auth-worker/web/: package-lock.json  package.json  tsconfig.json  webpack.config.js
auth-worker/web/public/: index.html
auth-worker/web/src/: api.ts  index.tsx  types.ts
auth-worker/web/src/components/: AddNodeForm.tsx  AddSubTemplateForm.tsx  AddUserForm.tsx  NodeTable.tsx  SubTemplateTable.tsx  UserTable.tsx
auth-worker/web/src/hooks/: useToken.ts
auth-worker/web/src/pages/: DashboardPage.tsx  LoginPage.tsx  UserDashboardPage.tsx  UserLoginPage.tsx
auth-worker/web/src/utils/: format.ts
crates/trojan-agent/: Cargo.toml
crates/trojan-agent/src/: cache.rs  cli.rs  client.rs  collector.rs  config.rs  error.rs  lib.rs  protocol.rs  reporter.rs  runner.rs
crates/trojan-analytics/: Cargo.toml  README.md
crates/trojan-analytics/src/: collector.rs  error.rs  event.rs  lib.rs
crates/trojan-analytics/src/writer/: clickhouse.rs  file.rs  mod.rs
crates/trojan-auth/: Cargo.toml  README.md
crates/trojan-auth/benches/: auth.rs
crates/trojan-auth/src/: cli.rs  error.rs  hash.rs  http.rs  lib.rs  memory.rs  reloadable.rs  result.rs  traits.rs
crates/trojan-auth/src/sql/: backend.rs  cache.rs  config.rs  mod.rs  queries.rs  tests.rs  traffic.rs
crates/trojan-auth/src/store/: auth.rs  cache.rs  config.rs  mod.rs  record.rs  traffic.rs  traits.rs
crates/trojan-cert/: Cargo.toml  README.md
crates/trojan-cert/src/: cli.rs  generate.rs  lib.rs
crates/trojan-client/: Cargo.toml  README.md
crates/trojan-client/src/: cli.rs  config.rs  connector.rs  error.rs  handler.rs  lib.rs
crates/trojan-client/src/socks5/: handshake.rs  mod.rs  udp.rs
crates/trojan-client/tests/: e2e_client_server.rs
crates/trojan-config/: Cargo.toml  README.md
crates/trojan-config/src/: analytics.rs  cli.rs  ddns.rs  defaults.rs  lib.rs  loader.rs  types.rs  validate.rs
crates/trojan-core/: Cargo.toml  README.md
crates/trojan-core/benches/: io.rs
crates/trojan-core/src/: defaults.rs  errors.rs  lib.rs
crates/trojan-core/src/io/: mod.rs  prefixed.rs  relay.rs
crates/trojan-core/src/transport/: mod.rs  ws.rs
crates/trojan-ddns/: Cargo.toml
crates/trojan-ddns/src/: cloudflare.rs  error.rs  ip.rs  lib.rs  runner.rs
crates/trojan-dns/: Cargo.toml
crates/trojan-dns/src/: config.rs  error.rs  lib.rs  resolver.rs
crates/trojan-lb/: Cargo.toml  README.md
crates/trojan-lb/src/: guard.rs  lib.rs
crates/trojan-metrics/: Cargo.toml  README.md
crates/trojan-metrics/src/: lib.rs
crates/trojan-proto/: Cargo.toml  README.md
crates/trojan-proto/benches/: proto.rs
crates/trojan-proto/src/: lib.rs
crates/trojan-protocol/: Cargo.toml
crates/trojan-protocol/src/: lib.rs
crates/trojan-relay/: Cargo.toml  README.md
crates/trojan-relay/src/: cli.rs  config.rs  entry.rs  error.rs  handshake.rs  lib.rs  relay.rs  router.rs
crates/trojan-relay/src/transport/: mod.rs  plain.rs  tls.rs
crates/trojan-relay/tests/: multihop_e2e.rs
crates/trojan-rs/: Cargo.toml  README.md
crates/trojan-rs/src/: lib.rs
crates/trojan-rules/: Cargo.toml  README.md
crates/trojan-rules/src/: engine.rs  error.rs  geoip_db.rs  lib.rs  rule.rs
crates/trojan-rules/src/matcher/: domain.rs  geoip.rs  ip.rs  mod.rs
crates/trojan-rules/src/parser/: clash.rs  mod.rs  surge.rs
crates/trojan-rules/src/provider/: file.rs  http.rs  mod.rs
crates/trojan-server/: Cargo.toml  README.md
crates/trojan-server/benches/: server.rs
crates/trojan-server/src/: cli.rs  debug_api.rs  error.rs  lib.rs  main.rs  outbound.rs  pool.rs  rate_limit.rs  relay.rs  resolve.rs  rules.rs  server.rs  state.rs  tls.rs  util.rs  ws.rs
crates/trojan-server/src/handler/: fallback.rs  mod.rs  tcp.rs  udp.rs  ws.rs
crates/trojan-server/tests/: integration_test.rs  trojan_client_test.rs
crates/trojan-transport/: Cargo.toml  README.md
crates/trojan-transport/src/: error.rs  lib.rs  plain.rs  tls.rs  tls_config.rs  ws.rs
scripts/: release.sh
src/: lib.rs  main.rs  upgrade.rs
