[package]
name = "auth-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["d1"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
sha2 = "0.10"
hex = "0.4"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
