[package]
name = "trojan-auth-worker"
version = "0.1.8"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3.3"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
