[package]
name = "trojan-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Panel agent for trojan-rs — connects to management panel, receives config, boots services"
keywords = ["trojan", "agent", "panel", "management"]
categories = ["network-programming"]

[dependencies]
trojan-core.workspace = true
trojan-config.workspace = true
trojan-protocol.workspace = true
trojan-auth.workspace = true
trojan-server.workspace = true
trojan-relay.workspace = true

bincode.workspace = true
clap.workspace = true
futures-util.workspace = true
hostname.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "signal",
    "sync",
    "fs",
] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
