[package]
name = "trojan-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Analytics module for trojan-rs with ClickHouse support"
keywords = ["trojan", "analytics", "clickhouse", "metrics"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
trojan-config.workspace = true
clickhouse = { version = "0.14", features = ["inserter", "time"] }
time.workspace = true
tokio = { workspace = true, features = ["sync", "time", "fs", "io-util"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand = "0.9"

[lints]
workspace = true
