[package]
name = "trojan-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Authentication backends for trojan-rs"
keywords = ["trojan", "proxy", "authentication"]
categories = ["network-programming", "authentication"]
readme = "README.md"

[features]
default = []

# Batched traffic recording (tokio MPSC)
batched-traffic = ["dep:tokio"]

# SQL backend with SQLx
sql = ["dep:sqlx", "batched-traffic"]

# Database drivers (user picks one or more)
sql-postgres = ["sql", "sqlx/postgres"]
sql-mysql = ["sql", "sqlx/mysql"]
sql-sqlite = ["sql", "sqlx/sqlite"]

# TLS options for SQL connections
sql-tls-rustls = ["sqlx/tls-rustls-ring"]
sql-tls-native = ["sqlx/tls-native-tls"]

# HTTP backend (calls remote auth-worker)
http = ["dep:reqwest", "dep:bincode", "dep:serde", "dep:serde_json"]

# CLI tool for auth management
cli = ["sql", "dep:clap", "dep:tabled", "tokio/rt-multi-thread"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
parking_lot.workspace = true

# Optional SQLx dependency
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "any",
], optional = true }

# For batch traffic recording (optional, only with sql feature)
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"], optional = true }

# HTTP backend dependencies (optional)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
bincode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# CLI dependencies (optional)
clap = { workspace = true, features = ["derive", "env"], optional = true }
tabled = { version = "0.20", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "auth"
harness = false

[[bin]]
name = "trojan-auth"
path = "src/bin/cli.rs"
required-features = ["cli"]

[lints]
workspace = true
