[package]
name = "trojan-cert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Certificate generation utilities for trojan-rs"
keywords = ["trojan", "certificate", "tls", "self-signed"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
rcgen.workspace = true
clap.workspace = true
thiserror.workspace = true
time.workspace = true

[lints]
workspace = true
