[package]
name = "trojan-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Trojan protocol client with SOCKS5 proxy"
keywords = ["trojan", "proxy", "tls", "socks5", "client"]
categories = ["network-programming"]

[lib]
name = "trojan_client"
path = "src/lib.rs"

[dependencies]
bytes = "1"
clap = { version = "4", features = ["derive"] }
rustls = "0.23"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "signal",
    "sync",
] }
tokio-rustls = "0.26"
tokio-util = "0.7"
toml = "0.9"
serde_json = "1"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
webpki-roots = "0.26"
socket2 = "0.6"

# workspace crates
trojan-core.workspace = true
trojan-proto.workspace = true
trojan-auth.workspace = true
trojan-config.workspace = true

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem"] }
tempfile = "3"
trojan-server.workspace = true
tokio = { version = "1", features = ["test-util"] }
