[package]
name = "trojan-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Trojan protocol client with SOCKS5 proxy"
keywords = ["trojan", "proxy", "tls", "socks5", "client"]
categories = ["network-programming"]

[lib]
name = "trojan_client"
path = "src/lib.rs"

[dependencies]
bytes.workspace = true
clap.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "signal",
    "sync",
] }
tokio-rustls.workspace = true
tokio-util.workspace = true
toml.workspace = true
serde_json.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
webpki-roots.workspace = true
socket2.workspace = true

# workspace crates
trojan-core.workspace = true
trojan-proto.workspace = true
trojan-auth.workspace = true
trojan-config.workspace = true

[dev-dependencies]
ctor.workspace = true
rcgen.workspace = true
tempfile.workspace = true
trojan-server = { workspace = true, features = ["rules"] }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
