[package]
name = "trojan-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration loading and validation for trojan-rs"
keywords = ["trojan", "proxy", "config"]
categories = ["network-programming", "config"]
readme = "README.md"

[dependencies]
trojan-core.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
thiserror = "2"
json_comments = "0.2.2"
