[package]
name = "trojan-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration loading and validation for trojan-rs"
keywords = ["trojan", "proxy", "config"]
categories = ["network-programming", "config"]
readme = "README.md"

[dependencies]
trojan-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
json_comments = "0.2.2"
