[package]
name = "trojan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types and constants for trojan-rs"
keywords = ["trojan", "proxy"]
categories = ["network-programming"]
readme = "README.md"

[features]
default = []
ws = ["tokio-tungstenite", "futures-util"]

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["io-util", "time", "macros", "sync"] }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time", "sync"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "io"
harness = false
