[package]
name = "trojan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core types and constants for trojan-rs"
keywords = ["trojan", "proxy"]
categories = ["network-programming"]
readme = "README.md"

[features]
default = []
ws = ["tokio-tungstenite", "futures-util"]

[dependencies]
bytes.workspace = true
tokio = { workspace = true, features = ["io-util", "time", "macros", "sync"] }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "time", "sync"] }
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "io"
harness = false
