[package]
name = "trojan-dns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Async DNS resolver for trojan-rs with caching and DoH/DoT support"
keywords = ["trojan", "dns", "resolver", "doh", "dot"]
categories = ["network-programming"]

[dependencies]
hickory-resolver.workspace = true
hickory-proto = "0.25"

serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
