[package]
name = "trojan-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Prometheus metrics for trojan-rs"
keywords = ["trojan", "proxy", "metrics", "prometheus"]
categories = ["network-programming"]

[dependencies]
trojan-core.workspace = true
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
axum = "0.8"
tokio = { version = "1", features = ["rt", "net"] }
