[package]
name = "trojan-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Prometheus metrics for trojan-rs"
keywords = ["trojan", "proxy", "metrics", "prometheus"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
trojan-core.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum.workspace = true
tokio = { workspace = true, features = ["rt", "net"] }

[lints]
workspace = true
