[package]
name = "trojan-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Trojan protocol parsing and serialization"
keywords = ["trojan", "proxy", "protocol"]
categories = ["network-programming", "parser-implementations"]
readme = "README.md"

[dependencies]
bytes.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "proto"
harness = false

[lints]
workspace = true
