[package]
name = "trojan-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "WebSocket protocol types shared between trojan-agent and trojan-panel"
keywords = ["trojan", "protocol", "panel"]
categories = ["network-programming"]

[dependencies]
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
