[package]
name = "trojan-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Relay chain and entry node for trojan-rs multi-hop tunneling"
keywords = ["trojan", "relay", "tunnel", "proxy"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
trojan-core = { workspace = true }
trojan-proto = { workspace = true }
trojan-transport = { workspace = true }
trojan-dns = { workspace = true }
trojan-lb = { workspace = true }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "macros",
    "sync",
    "signal",
] }
rustls.workspace = true

sha2.workspace = true
hex.workspace = true

serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
clap.workspace = true
tokio-util = { workspace = true, features = ["compat", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }

[lints]
workspace = true
