[package]
name = "trojan-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A Rust implementation of the Trojan protocol (re-exports trojan crate)"
keywords = ["trojan", "proxy", "tls", "network"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
trojan.workspace = true

[lints]
workspace = true
